--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,9 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       layout: "default"
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
